<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/topImage"
            android:contentDescription="@string/app_name"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/img"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <Button
            android:id="@+id/btnCamera"
            android:layout_width="166dp"
            android:layout_height="51dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#7E57C2"
            android:text="@string/camera"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toStartOf="@id/btnGallery"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topImage" />

        <Button
            android:id="@+id/btnGallery"
            android:layout_width="167dp"
            android:layout_height="47dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#7E57C2"
            android:text="@string/gallery"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnCamera"
            app:layout_constraintTop_toBottomOf="@id/topImage" />


        <EditText
            android:id="@+id/ed_add_description"
            android:layout_width="348dp"
            android:layout_height="156dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#7E57C2"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnCamera"
            android:autofillHints="name" />


        <Button
            android:id="@+id/button_add"
            android:layout_width="266dp"
            android:layout_height="45dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#7E57C2"
            android:text="@string/upload"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_add_description" />

        <ProgressBar
            android:id="@+id/progressBarLoading"
            style="?android:attr/progressBarStyle"
            android:layout_width="69dp"
            android:layout_height="63dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.598" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
